# Modular-Patch-Level-Image-Obfuscation-Framework-for-Untrusted-Third-Party-Vision-Inference

./: .gitignore  LICENSE  README.md  REVISION_V3_HANDOFF.md  performance_eval.ipynb  pyproject.toml  requirements.txt  run_experiments.py
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.devcontainer/scripts/: install-dev-tools.sh
.github/workflows/: build-devcontainer.yaml
configs/dataset/: cifar10.yaml  coco2017-instances.yaml  imagenet-1k-256.yaml
configs/experiments/: beit_cifar10.yaml  blip_flickr30k_captioning.yaml  clip_zero_shot.yaml  (+19 more)
data/: model_output.py  obfusccation_output.py  output.py  type.py
data_model/: config.py  data.py
model/: base.py  segmentation.py
network/: embedding.py  obfuscation.py
nn/: deobfuscator.py  obfuscator.py
notebooks/: 01_single_experiment.ipynb  02_run_all_experiments.ipynb  03_attack_evaluation.ipynb  04_side_channel_analysis.ipynb  05_tradeoff_analysis.ipynb  06_medical_imaging.ipynb  07_segmentation_multitask.ipynb  08_results_dashboard.ipynb
old/: LICENSE
outputs/: adversarial_results.json  clip-zero-shot-cifar10_results.json  deit-cifar10_results.json  vit-bloodmnist_results.json  vit-cifar100_results.json  vit-cifar10_results.json  vit-dermamnist_results.json  vit-imagenet_results.json  vit-pathmnist_results.json
scripts/: run_adversarial_scenarios.py  run_horio_adversary_comparison.py  run_permutation_family_comparison.py  run_remaining_experiments.py
tests/: test_adapter.py  test_config.py  test_embedding.py  test_loader_and_tasks.py  test_obfuscator.py  test_revision_artifacts.py
(+91 files in other folders)
